--- a/.github/workflows/testops-integration.yml
+++ b/.github/workflows/testops-integration.yml
@@ -58,6 +58,6 @@ jobs:
           printenv | grep ALLURE_
       - name: Get GITHUB_ environments
         run: | 
-          printenv 
+          printenv | grep GITHUB_
       - name: List results
         run: ls -la ${ALLURE_RESULTS}
